--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,19 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    //to create awesome spinner
+    implementation 'com.github.arcadefire:nice-spinner:1.4.4'
+    //retrofit to get api results from movie database
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    //paperdb to store the movie details in offline in app
+    implementation 'io.paperdb:paperdb:2.7.1'
+
+    //diagonallayout to create a diagonal image view
+    implementation 'com.github.florent37:diagonallayout:1.1.1'
+    implementation 'com.flaviofaria:kenburnsview:1.0.7'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
