init retrofit client to use api and prepare models

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,8 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        buildConfigField "String", "API_KEY", "\"${TheMovieDBAPIKEY}\""
+        buildConfigField "String", "BASE_URL_IMAGE", "\"https://image.tmdb.org/t/p/original\""
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -24,6 +25,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
