--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@ android {
         versionName "1.0"
         buildConfigField "String", "API_KEY", "\"${TheMovieDBAPIKEY}\""
         buildConfigField "String", "BASE_URL_IMAGE", "\"https://image.tmdb.org/t/p/original\""
+        buildConfigField "String", "BASE_URL_SEARCH", "\"https://image.tmdb.org/t/p/w500\""
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
