--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,6 @@ dependencies {
     implementation 'com.github.florent37:diagonallayout:1.1.1'
     //Kenburns view
     implementation 'com.flaviofaria:kenburnsview:1.0.7'
+    //Search-dialog
+    implementation 'com.github.mirrajabi:search-dialog:1.2.4'
 }
