--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,6 @@ dependencies {
     implementation 'com.flaviofaria:kenburnsview:1.0.7'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    //zoom image
+    implementation 'com.jsibbold:zoomage:1.3.1-SNAPSHOT'
 }
