--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,6 @@ dependencies {
     implementation 'com.flaviofaria:kenburnsview:1.0.7'
     //Search-dialog
     implementation 'com.github.mirrajabi:search-dialog:1.2.4'
+    //zoom image
+    implementation 'com.jsibbold:zoomage:1.3.1-SNAPSHOT'
 }
