--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,8 @@ dependencies {
 
     //zoom image
     implementation 'com.jsibbold:zoomage:1.3.1-SNAPSHOT'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    implementation group: 'com.github.lzyzsd.circleprogress', name: 'library', version: '1.2.0'
 }
