--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,4 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 TheMovieDBAPIKEY = 48f9067d74482e05b9bb40c806cb24f0
+GoogleCloudApiKey = AIzaSyBwZI-Wlh-Pe-CCmega9FD4JdiRJeCZgho
