--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MovieApp">
-        <activity android:name=".MovieDetailActivity"></activity>
+        <activity android:name=".VideoPlayActivity"></activity>
+        <activity android:name=".MovieDetailActivity" />
         <activity android:name=".ImageViewerActivity" />
         <activity android:name=".PersonDetailActivity" />
         <activity android:name=".HomeActivity">
